--- a/calculator.html
+++ b/calculator.html
@@ -8,7 +8,8 @@ function square() {
 }
 </script>
 </head>
-<body>
+<body
+<h1>Alvaro Torres Botella</h1>
   Number:
   <input type="text" id="n1"><p>
 
